test/files/neg/t556.check
t556.scala:3: error: missing parameter type
  def g:Int = f((x,y)=>x)
                 ^
t556.scala:3: error: missing parameter type
  def g:Int = f((x,y)=>x)
                   ^
two errors found
